<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.andrewesteves.despesas.EditarActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editarEditTextTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/titulo"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editarEditTextTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:hint="@string/total"/>

        <EditText
            android:id="@+id/editarEditTextCodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/total"
            android:visibility="gone"/>

        <Button
            android:id="@+id/editarButtonConfirmar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/atualizar"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/editarButtonRemover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/remover"
            android:background="@color/colorRed"
            android:textColor="@android:color/background_light" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
