<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.andrewesteves.despesas.CadastrarActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/cadastrarEditTextTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/titulo"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/cadastrarEditTextTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:hint="@string/total"/>

        <Button
            android:id="@+id/cadastrarButtonConfirmar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmar"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/background_light" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
