<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context="br.com.andrewesteves.despesas.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/ic_coins"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="Despesas App"
            android:textSize="20sp"
            tools:fontFamily="casual" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/mainButtonCadastrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/cadastrar"
                android:textColor="@android:color/background_light"
                android:layout_margin="5dp"
                tools:fontFamily="casual"/>

            <Button
                android:id="@+id/mainButtonListar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@color/colorAccent"
                android:text="@string/listar"
                android:textColor="@android:color/background_light"
                android:layout_margin="5dp"
                tools:fontFamily="casual"/>

            <Button
                android:id="@+id/mainButtonCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@color/colorBlack"
                android:text="@string/camera"
                android:textColor="@android:color/background_light"
                android:layout_margin="5dp"
                tools:fontFamily="casual"/>

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
